Fix root link to index.html for GH Pages

--- a/about-us.html
+++ b/about-us.html
@@ -102,7 +102,12 @@
                 <a href="contact.html" class="navbar-link w-nav-link"
                   >Contact</a
                 >
-                <a href="/zh/" onclick="setLangPreference('zh'); return false;" class="navbar-link w-nav-link">中文</a>
+                <a
+                  href="zh/"
+                  onclick="setLangPreference('zh'); return false;"
+                  class="navbar-link w-nav-link"
+                  >中文</a
+                >
               </div>
             </nav>
             <div class="navbar-menu-button w-nav-button">
