--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                                   >Contact</a
                                 >
                                 <a
-                                  href="/zh/" onclick="setLangPreference('zh'); return false;"
+                                  href="zh/"
+                                  onclick="setLangPreference('zh'); return false;"
                                   class="navbar-link w-nav-link"
                                   >中文</a
                                 >
