--- a/zh/index.html
+++ b/zh/index.html
@@ -211,7 +211,7 @@
                                   >联系我们</a
                                 >
                                 <a
-                                  href="/"
+                                  href="index.html"
                                   onclick="setLangPreference('en'); return false;"
                                   class="language-switch w-nav-link"
                                   >EN</a
