--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
               <a href="news.html" aria-current="page" class="navbar-link w-nav-link w--current">News</a>
               <a href="join-us.html" class="navbar-link w-nav-link">Join Us</a>
               <a href="contact.html" class="navbar-link w-nav-link">Contact</a>
-              <a href="/zh/" onclick="setLangPreference('zh'); return false;" class="navbar-link w-nav-link">中文</a>
+              <a href="zh/" onclick="setLangPreference('zh'); return false;" class="navbar-link w-nav-link">中文</a>
             </div>
           </nav>
           <div class="navbar-menu-button w-nav-button">
