--- a/philanthropy.html
+++ b/philanthropy.html
@@ -103,7 +103,7 @@
                   >Contact</a
                 >
                 <a
-                  href="/zh/"
+                  href="zh/"
                   onclick="setLangPreference('zh'); return false;"
                   class="navbar-link w-nav-link"
                   >中文</a
