--- a/zh/news-detail.html
+++ b/zh/news-detail.html
@@ -112,7 +112,7 @@
                   >联系我们</a
                 >
                 <a
-                  href="/"
+                  href="index.html"
                   onclick="setLangPreference('en'); return false;"
                   class="language-switch w-nav-link"
                   >EN</a
