--- a/zh/about-us.html
+++ b/zh/about-us.html
@@ -284,12 +284,6 @@
                     <div class="team-image-wrapper">
                       <img
                         sizes="(max-width: 1181px) 100vw, 1181px"
-                        srcset="
-                          ../images/Lei-Feng-p-500.jpg   500w,
-                          ../images/Lei-Feng-p-800.jpg   800w,
-                          ../images/Lei-Feng-p-1080.jpg 1080w,
-                          ../images/Young-Lu.jpg        1181w
-                        "
                         alt=""
                         src="../images/Young-Lu.jpg"
                         loading="lazy"
@@ -713,9 +707,7 @@
             <div class="padding-vertical">
               <div class="w-layout-grid footer-component">
                 <div class="footer-left">
-                  <a
-                    href="index.html"
-                    class="footer-logo-link w-nav-brand"
+                  <a href="index.html" class="footer-logo-link w-nav-brand"
                     ><img
                       width="254"
                       loading="lazy"
@@ -745,9 +737,7 @@
                     >
                   </div>
                   <div class="footer-link-list">
-                    <a href="news.html" class="footer-sitemap-zh"
-                      >公司新闻</a
-                    >
+                    <a href="news.html" class="footer-sitemap-zh">公司新闻</a>
                     <a href="join-us.html" class="footer-sitemap-zh"
                       >加入我们</a
                     >
