--- a/zh/news.html
+++ b/zh/news.html
@@ -144,7 +144,7 @@
                 <div
                   class="line-divider background-primary margin-bottom margin-80"
                 ></div>
-                <div class="section-news margin-bottom margin-120">
+                <!-- <div class="section-news margin-bottom margin-120">
                   <a
                     href="news-detail.html"
                     class="news-container-zh w-inline-block"
@@ -189,7 +189,8 @@
                       </div>
                     </div>
                   </a>
-                </div>
+                </div> -->
+                <p class="text-align-center">暂无数据</p>
               </div>
             </div>
           </div>
@@ -236,9 +237,7 @@
             <div class="padding-vertical">
               <div class="w-layout-grid footer-component">
                 <div class="footer-left">
-                  <a
-                    href="index.html"
-                    class="footer-logo-link w-nav-brand"
+                  <a href="index.html" class="footer-logo-link w-nav-brand"
                     ><img
                       width="254"
                       loading="lazy"
